.golden/2897849520519503487/golden

INITIALPATH:25:3: error: [-Wmissing-fields, -Werror=missing-fields]
    • Fields of ‘Foo’ not initialised: fieldA
    • In the expression: Foo {fieldB = (PyF.magicFormat (Data.Text.Internal.Builder.fromString "hello what's up " <> Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) PyF.Internal.QQ.PaddingDefaultK) Nothing) Nothing) x)))}
      In an equation for ‘yolo’:
          yolo
            = Foo {fieldB = (PyF.magicFormat (Data.Text.Internal.Builder.fromString "hello what's up " <> Data.Text.Internal.Builder.fromString (((((PyF.Internal.QQ.formatAny PyF.Formatters.Minus) PyF.Internal.QQ.PaddingDefaultK) Nothing) Nothing) x)))}
            where
                x :: T.Text
                x = T.pack "hi"
   |
25 |   Foo
   |   ^^^...

INITIALPATH:32:1: error: [-Wmissing-signatures, -Werror=missing-signatures] Top-level binding with no type signature: main :: IO ()
   |
32 | main = print yolo
   | ^^^^
